--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
 
 html { 
 	font-family: 'Roboto Mono', monospace; 
@@ -18,29 +18,40 @@ body {
   	-webkit-font-smoothing: antialiased;
   	text-align: center;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
 	justify-content: center;
 	align-items: center;
 	background-color: rgba(230, 249, 245, 1.0);
 }
 
 h2 {
-	margin: 8px 0 8px;
+	margin: 4px 0 4px;
 	font-weight: 600;
-	font-size: 24px;
+	font-size: 28px;
 	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
 }
 
-h3 {
-	font-weight: 500;
+p {
+	font-weight: 400;
 	font-size: 18px;
 	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
+	max-width: 60%;
 }
 
 img {
 	margin-top: -12px;
 	margin-bottom: -46px;
+	max-width: 100%;
+}
+
+.emphasized {
+	font-size: 18px;
+	font-weight: 700;
+	color: rgba(2, 192, 158, 1.0);
+	background-color: rgba(2, 192, 158, 0.08);
+	padding: 3px 6px;
+	border-radius: 8px;
+	margin-left: -6px;
+	margin-right: -6px;
 }
 
 .button {
@@ -56,6 +67,7 @@ img {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	max-width: 100%;
 }
 
 #long-segment {
