--- a/style.css
+++ b/style.css
@@ -23,21 +23,18 @@ body {
 	background-color: rgba(230, 249, 245, 1.0);
 }
 
-h2 {
-	margin: 4px 0 4px;
-	font-weight: 600;
-	font-size: 28px;
-	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
-}
-
 p {
 	font-weight: 500;
-	font-size: 18px;
+	font-size: 20px;
 	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
+	color: rgba(31, 46, 43, 1.0);
+	width: 420px;
+	max-width: 90%;
 }
 
 b {
-	font-size:  20px;
+	font-weight: 700;
+	color: rgba(0, 0, 0, 1.0);
 }
 
 #event {
@@ -68,6 +65,8 @@ b {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: auto;
+	margin-bottom: auto;
 	max-width: 100%;
 }
 
