--- a/style.css
+++ b/style.css
@@ -27,9 +27,14 @@ p {
 	font-weight: 500;
 	font-size: 20px;
 	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
-	color: rgba(31, 46, 43, 1.0);
+	color: rgba(0, 0, 0, 0.85);
 	width: 420px;
 	max-width: 90%;
+}
+
+#note {
+	font-size:  14px;
+	margin-bottom: 32px;
 }
 
 b {
@@ -37,14 +42,29 @@ b {
 	color: rgba(0, 0, 0, 1.0);
 }
 
+input {
+	outline: none;
+	padding: 12px 24px;
+	border-radius: 24px;
+	font-size: 18px;
+	border: none;
+	font-family: 'Roboto Mono', monospace; 
+	text-align: center;
+}
+
+button {
+   border: none;
+   margin-top: 12px;
+   font-family: 'Roboto Mono', monospace; 
+}
+
 #event {
 	margin-top: -12px;
-	margin-bottom: 5px;
 	max-width: 100%;
 }
 
 .button {
-	background-color: rgba(2, 192, 158, 0.15);
+	background-color:  var(--regular-background-color);
 	padding: 12px 24px;
 	border-radius: 24px;
 	font-size: 18px;
@@ -54,7 +74,7 @@ b {
 }
 
 .button:hover {
-	background-color: rgba(2, 192, 158, 0.19);
+	background-color: var(--hover-background-color);
 }
 
 .button:active {
@@ -74,7 +94,6 @@ b {
 	width: 6px;
 	height:  17px;
 	background-color: rgba(0, 0, 0, 0.07);
-	margin-bottom: 5px;
 	border-radius: 3px;
 }
 
@@ -82,6 +101,12 @@ b {
 	width: 6px;
 	height:  12px;
 	background-color: rgba(0, 0, 0, 0.07);
-	margin-bottom: 5px;
+	margin-bottom: 6px;
+	margin-top:  6px;
 	border-radius: 3px;	
+}
+
+#timeline {
+	margin-bottom: 12px;
+	margin-top:  12px;
 }
