--- a/style.css
+++ b/style.css
@@ -79,6 +79,15 @@ button {
 	transform: scale(0.98);
 }
 
+@keyframes fade {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 #stack {
 	display: flex;
 	flex-direction: column;
@@ -86,6 +95,13 @@ button {
 	margin-top: auto;
 	margin-bottom: auto;
 	max-width: 100%;
+	opacity: 0;
+}
+
+#stack.loaded {
+	animation: fade 0.3s;
+	animation-fill-mode: forwards;
+	animation-timing-function: ease-in;
 }
 
 #long-segment {
