--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html { 
-	font-family: 'Roboto Mono', monospace; 
+	font-family: sans-serif;
+	height: 100%;
 }
 
 * {
@@ -9,16 +10,21 @@ html {
 	text-decoration: none;
 	box-sizing: border-box;
 }
-html, body {
-	height: 100%;
-}
+
 body {
   	-webkit-font-smoothing: antialiased;
   	text-align: center;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+}
+
+#background {
 	background-color: rgba(230, 249, 245, 1.0);
+	height: 100%;
+}
+
+#privacyBackground {
+	height: auto;
 }
 
 p {
@@ -26,8 +32,12 @@ p {
 	font-size: 20px;
 	text-shadow: 1px 1px 10px rgba(255, 255, 255, 1.0);
 	color: rgba(0, 0, 0, 0.85);
+}
+
+#stackText {
 	width: 420px;
 	max-width: 90%;
+	font-family: 'Roboto Mono', monospace; 
 }
 
 #note {
@@ -53,6 +63,7 @@ b {
 	color: rgba(2, 192, 158, 1.0);
 	font-weight: 700;
 	transition: background-color 250ms, transform 250ms;
+	margin-bottom: 16px;
 }
 
 .button:hover {
@@ -82,6 +93,16 @@ b {
 	opacity: 0;
 }
 
+#textblock {
+	display: flex;
+	flex-direction: column;
+	max-width: 88%;
+	text-align: left;
+	margin-top: 64px;
+	margin-bottom: 64px;
+	line-height: 1.5;
+}
+
 #stack.loaded {
 	animation: fade 0.3s;
 	animation-fill-mode: forwards;
@@ -107,4 +128,8 @@ b {
 #timeline {
 	margin-bottom: 12px;
 	margin-top:  12px;
+}
+
+h2 {
+	padding-top: 16px;
 }
