--- a/style.css
+++ b/style.css
@@ -55,6 +55,25 @@ b {
 	max-width: 100%;
 }
 
+.menubutton {
+	background-color:  var(--regular-background-color);
+	padding: 8px 16px;
+	border-radius: 16px;
+	font-size: 14px;
+	color: rgba(2, 192, 158, 1.0);
+	font-weight: 700;
+	transition: background-color 250ms, transform 250ms;
+	font-family: 'Roboto Mono', monospace; 
+}
+
+.menubutton:hover {
+	background-color: var(--hover-background-color);
+}
+
+.menubutton:active {
+	transform: scale(0.98);
+}
+
 .button {
 	background-color:  var(--regular-background-color);
 	padding: 12px 24px;
@@ -91,6 +110,14 @@ b {
 	margin-bottom: auto;
 	max-width: 100%;
 	opacity: 0;
+}
+
+#presskitButton {
+	position:absolute;
+	top: 12px;
+	right: 12px;
+	/*margin-top: 16px;*/
+	/*margin-right:  16px;*/
 }
 
 #textblock {
